Make React Thumbnail

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
-
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-5 target">
+			</div>
+		</div>
+	</div>
 </body>
 	<script type="text/jsx">
 		//Define react component class
@@ -21,16 +26,34 @@
 			}
 		});
 
+		var Thumbnail = React.createClass({
+			render: function() {
+				return <div className="thumbnail">
+      			<img src={this.props.imageUrl}  />
+	      			<div className="caption">
+		      		  	<h3>{this.props.header}</h3>
+		        		<p>{this.props.description}</p>
+		        		<p>
+		        			<Badge title={this.props.title} number={this.props.number} />
+		        		</p>
+	     			 </div>
+    			 </div>
+			}
+		});
+
 		var options = {
-			title: 'Inbox',
-			number: 22
+			title: 'Blog Posts',
+			number: 22,
+			header: 'Learn React',
+			description: 'React is great for creating dymanic pages',
+			imageUrl: 'http://www.tivix.com/uploads/images/reactjs_logo.focus-none.max-256x256_km4GLmI.png'
 		};
 
 		//Ask react to render this class
-		var element = React.createElement(Badge, options);
+		var element = React.createElement(Thumbnail, options);
 
 		//When we ask react to render this class, we will tell it where to place the rendered
 		//element in the DOM
-		ReactDOM.render(element, document.body);
+		ReactDOM.render(element, document.querySelector('.target'));
 	</script>
 </html>
